[package]
name = "stream-test-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
description = "Tools for testing analysis"
repository = "https://github.com/jhb123/joes-gst-plugins"


[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
once_cell = "1.19.0"

[lib]
name = "stream_test_tools"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
