[package]
name = "stream-test-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
description = "Tools for testing analysis"
repository = "https://github.com/jhb123/joes-gst-plugins"


[dependencies]
gst = { workspace=true }
gst-base = { workspace=true }
gst-video = { workspace=true }
once_cell = { workspace=true }

[lib]
name = "stream_test_tools"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { workspace=true }

